Update author meta tag in discover.html

--- a/discover.html
+++ b/discover.html
@@ -7,7 +7,7 @@
       name="description"
       content="Chamber of Commerce - Discover Local Businesses"
     />
-    <meta name="author" content="Victor Talabi" />
+    <meta name="author" content="Taiye Adebenson" />
     <title>Discover - Chamber of Commerce</title>
     <link rel="icon" href="week01/images/fav (2).webp" />
     <meta property="og:title" content="Discover - Chamber of Commerce" />
