--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="WDD 230 - Web Frontend Development" />
-    <meta name="author" content="Victor Talabi" />
-    <title>WDD 230 - Victor Talabi</title>
+    <meta name="description" content="WDD 231 - Web Frontend Development" />
+    <meta name="author" content="Taiye Adebenson" />
+    <title>WDD 231 - Taiye Adebenson</title>
     <link rel="icon" href="/chamber/Images/fav (2).webp " />
 
     <!-- Linking the existing CSS files with relative paths -->
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <h1>Victor Talabi</h1>
+      <h1>Taiye Adebenson</h1>
     </header>
 
     <nav>
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-      <p>&copy; <span id="year"></span> Victor Talabi | WDD 230</p>
+      <p>&copy; <span id="year"></span> Taiye Adebenson | WDD 231</p>
       <p id="lastModified"></p>
     </footer>
 
