--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="WDD 230 - Web Frontend Development" />
-    <meta name="author" content="Victor Talabi" />
-    <title>WDD 230 - Victor Talabi</title>
+    <meta name="author" content="Taiye Adebenson" />
+    <title>WDD 230 - Taiye Adebenson</title>
     <link rel="icon" href="chamber/Images/fav (2).webp" />
 
     <link rel="stylesheet" href="week01/styles/normalize.css" />
@@ -105,7 +105,7 @@
     </main>
 
     <footer>
-      <p>&copy; <span id="year"></span> Victor Talabi | WDD 230</p>
+      <p>&copy; <span id="year"></span> Taiye Adebenson| WDD 230</p>
       <p id="lastModified"></p>
     </footer>
 
