--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Chamber of Commerce - Form Page" />
-    <meta name="author" content="Victor Talabi" />
+    <meta name="author" content="Taiye Adebenson" />
     <title>Form - WDD230 Course</title>
     <link rel="icon" href="week01/images/fav (2).webp" />
     <meta property="og:title" content="Form - WDD230 Course" />
@@ -113,7 +113,7 @@
 
     <!-- Footer (from the course home page) -->
     <footer>
-      <p>&copy; Victor Talabi | WDD230 Course Project</p>
+      <p>&copy; Taiye Adebenson | WDD230 Course Project</p>
     </footer>
 
     <!-- Inline JavaScript for form validation and range display -->
