Update author name in join.html

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,7 +7,7 @@
       name="description"
       content="Join the Chamber of Commerce - Membership Application"
     />
-    <meta name="author" content="Victor Talabi" />
+    <meta name="author" content="Taiye Adebenson" />
     <title>Join the Chamber</title>
     <link rel="icon" href="../chamber/images/fav (2).webp" />
     <link rel="stylesheet" href="../week01/styles/normalize.css" />
@@ -111,7 +111,7 @@
     </main>
 
     <footer>
-      <p>&copy; <span id="year"></span> Victor Talabi | WDD 230 Project</p>
+      <p>&copy; <span id="year"></span> Taiye Adebenson | WDD 230 Project</p>
       <p id="lastModified"></p>
     </footer>
 
