Update author name and copyright year in HTML

--- a/chamber/site-plan.html
+++ b/chamber/site-plan.html
@@ -7,7 +7,7 @@
       name="description"
       content="Site plan for the Lagos Chamber of Commerce website"
     />
-    <meta name="author" content="Victor Talabi" />
+    <meta name="author" content="Taiye Adebenson" />
     <title>Lagos Chamber of Commerce - Site Plan</title>
     <link rel="stylesheet" href="../chamber/styles/normalize.css" />
     <link rel="stylesheet" href="../week01/styles/site-plan.css" />
@@ -83,7 +83,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2025 Victor Talabi | Lagos Chamber of Commerce</p>
+      <p>&copy; 2026 Taiye Adebenson | Lagos Chamber of Commerce</p>
     </footer>
   </body>
 </html>
