Update author name in thankyou.html

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Chamber of Commerce - Thank You" />
-    <meta name="author" content="Victor Talabi" />
+    <meta name="author" content="Taiye Adebenson" />
     <title>Thank You</title>
 
     <!-- Styles -->
@@ -34,7 +34,7 @@
     </main>
 
     <footer>
-      <p>&copy; <span id="year"></span> Victor Talabi | WDD 230 Project</p>
+      <p>&copy; <span id="year"></span> Taiye Adebenson | WDD 230 Project</p>
       <p id="lastModified"></p>
     </footer>
 
