--- a/discover.html
+++ b/discover.html
@@ -130,7 +130,7 @@
     </main>
 
     <footer>
-      <p>&copy; <span id="year"></span> Victor Talabi | WDD 230 Project</p>
+      <p>&copy; <span id="year"></span> Taiye Adebenson | WDD 230 Project</p>
       <p id="lastModified"></p>
     </footer>
 
